<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:weightSum="1">

    <TextView
        android:id="@+id/todo_detail_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/todo_title"
        style="@string/todo_title"/>

    <EditText
        android:id="@+id/todo_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/todo_hint"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/todo_detail"
        android:layout_width="match_parent"
        android:layout_height="@android:dimen/notification_large_icon_height"
        android:text="@string/todo_detail"/>

    <CheckBox
        android:id="@+id/todo_complete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/todo_done"/>

    <Button
        android:id="@+id/todo_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="saveButtonClicked"
        android:text="save task" />

</LinearLayout>